tests/paczka1/fuzzy1/15709730.err
Error in line 5: wj4 S357 78,9
Error in line 6: A32 A862 77,1
Error in line 9: A32 A32 94,4
Error in line 4: nEWgb A862 80,0
Error in line 11: 95N4 A32 85,4
Error in line 21: A32 A991 64,5
Error in line 3: QunPeMNRkZ A991 91,2
